chore: apply OpenRewrite cleanup from pre-commit
Auto-applied by the pre-commit Maven profile: replace Collections.emptySet/Map with Set.of/Map.of, expand star imports to explicit imports.

Co-Authored-By: Claude <noreply@anthropic.com>