@@ -30,7 +30,10 @@ import jakarta.servlet.http.HttpServletRequest;
 import org.apache.nifi.web.NiFiWebConfigurationContext;
 import org.jspecify.annotations.Nullable;
 
-import java.util.*;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 
 import static de.cuioss.nifi.jwt.util.TokenMasking.maskToken;
 
@@ -387,7 +390,7 @@ public class JwtValidationService {
 
                 return claims;
             }
-            return Collections.emptyMap();
+            return Map.of();
         }
     }
 
